k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service # Replace with your service name
  labels:
    app: hotelbooking # Replace with your app name
spec:
  selector:
    app: hotelbooking # Must match the label in the pod definition
  ports:
    - protocol: TCP
      port: 80 # The service port
      targetPort: 5000 # The port your application listens on within the pod
  type: NodePort # Or NodePort, LoadBalancer, etc.
